# easy_safe

./: .gitignore  Cargo.toml  README.md  easy_safe.drawio
.github/workflows/: rust.yml
easy_safe_pack/src/: lib.rs  mapenv.rs  persistence.rs
